# audio-svc-rs

./: .gitignore  Cargo.toml  diesel.toml  diff.sh  migration.sh  run.sh  setup.sh  test.sh
python/: test.pcm  test_chat.py  test_hello.py  test_history.py  test_mqtt.py  test_pipeline.py
src/: lib.rs
src/config/: global_cfg.rs  mod.rs
src/constant/: mod.rs
src/handlers/: auth.rs  chat.rs  echo_mage.rs  mod.rs  role.rs
src/json/: chat.rs  chat_history_response.rs  chat_session_history.rs  mod.rs  mqtt.rs  openai_response.rs  role.rs
src/models/: common.rs  mod.rs  role.rs  schema.rs  section.rs  session.rs  user_role.rs
src/structures/: app_error.rs  app_state.rs  chat.rs  mod.rs  role.rs  user.rs
src/utils/: mod.rs  mqtt.rs
tests/: test_model.rs
