[package]
name = "oz_server"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0", features = ["derive"] } # 序列化/反序列化
serde_json = "1.0"                                 # JSON 处理

# 数据库 ORM
diesel = { version = "2.0", features = ["postgres"] } # ORM 工具
dotenv = "0.15"                                       # 环境变量加载

# 配置管理
config = "0.15" # 配置文件加载

# 日志记录
log = "0.4"         # 日志接口
env_logger = "0.11" # 日志实现

# 认证
jsonwebtoken = "9" # JWT 支持
bcrypt = "0.16"    # 密码哈希

# 音频处理
rodio = "0.20" # 音频播放/录制
hound = "3.5"  # WAV 文件处理

# 实用工具
anyhow = "1.0"                                # 错误处理
thiserror = "2.0"                             # 自定义错误类型
uuid = { version = "1.0", features = ["v4"] } # UUID 生成
axum = "0.8.1"                                # Web 框架
