[package]
name = "oz_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oz_server"
path = "src/bin/oz_server.rs"

[dependencies]

serde = { version = "1.0", features = ["derive"] } # 序列化/反序列化
serde_json = "1.0"                                 # JSON 处理

# 数据库 ORM
diesel = { version = "2.0", features = ["postgres", "r2d2"] } # ORM 工具
dotenv = "0.15"                                               # 环境变量加载

# 配置管理
config = "0.15" # 配置文件加载

# 日志记录
log = "0.4"         # 日志接口
env_logger = "0.11" # 日志实现

# 认证
jsonwebtoken = "9" # JWT 支持
bcrypt = "0.16"    # 密码哈希

# 音频处理
rodio = "0.20" # 音频播放/录制
hound = "3.5"  # WAV 文件处理

# 实用工具
anyhow = "1.0"                                # 错误处理
thiserror = "2.0"                             # 自定义错误类型
uuid = { version = "1.0", features = ["v4"] } # UUID 生成
axum = "0.8.1"                                # Web 框架

tokio = { version = "1.42.0", features = ["full"] } # 异步运行时
lazy_static = "1.5"                                 # 静态变量

tower-http = { version = "0.6", features = ["cors"] }


llm-audio-toolkit = { git = "https://github.com/all2prosperity/llm-audio-toolkit.git" }
xid = "1.1.1"
chrono = "0.4.39"
async-openai = "0.26.0"